{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 151,
  "lineage": "9729e14c-b9be-22c9-77e2-1f689b7e785b",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:network-acl/acl-0c77aa6242d436309",
            "default_network_acl_id": "acl-0c77aa6242d436309",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c77aa6242d436309",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "760230531610",
            "subnet_ids": [
              "subnet-016123732597b8aaf",
              "subnet-02cade85938aa2531",
              "subnet-0712a57fc56c9f54d",
              "subnet-08ec4fc61653cf15d",
              "subnet-0931b4d78ab66645e",
              "subnet-09f93016d225d7d95"
            ],
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-default"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-default"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:route-table/rtb-0e839f6e924cf18d4",
            "default_route_table_id": "rtb-0e839f6e924cf18d4",
            "id": "rtb-0e839f6e924cf18d4",
            "owner_id": "760230531610",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-default"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:security-group/sg-038c9ee4c6e640295",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-038c9ee4c6e640295",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "760230531610",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-default"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-default"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cff5582ebabbd9a",
            "association_id": "eipassoc-0042412b8a5bcaf1d",
            "domain": "vpc",
            "id": "eipalloc-00cff5582ebabbd9a",
            "network_border_group": "us-west-2",
            "network_interface": "eni-09187fb8c8ec2d794",
            "private_dns": "ip-10-0-48-207.us-west-2.compute.internal",
            "private_ip": "10.0.48.207",
            "public_dns": "ec2-52-43-85-122.us-west-2.compute.amazonaws.com",
            "public_ip": "52.43.85.122",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:internet-gateway/igw-0cc1298d8d0845695",
            "id": "igw-0cc1298d8d0845695",
            "owner_id": "760230531610",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00cff5582ebabbd9a",
            "association_id": "eipassoc-0042412b8a5bcaf1d",
            "connectivity_type": "public",
            "id": "nat-0f47aaa904f50eefb",
            "network_interface_id": "eni-09187fb8c8ec2d794",
            "private_ip": "10.0.48.207",
            "public_ip": "52.43.85.122",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09f93016d225d7d95",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-us-west-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-007ab30e3ab234f121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f47aaa904f50eefb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007ab30e3ab234f12",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc1298d8d0845695",
            "id": "r-rtb-0ba96a2d12249a51f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba96a2d12249a51f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:route-table/rtb-007ab30e3ab234f12",
            "id": "rtb-007ab30e3ab234f12",
            "owner_id": "760230531610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f47aaa904f50eefb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-private"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:route-table/rtb-0ba96a2d12249a51f",
            "id": "rtb-0ba96a2d12249a51f",
            "owner_id": "760230531610",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc1298d8d0845695",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-public"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb2ebbf27479812e",
            "route_table_id": "rtb-007ab30e3ab234f12",
            "subnet_id": "subnet-0931b4d78ab66645e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6c2bfdbb15b844c",
            "route_table_id": "rtb-007ab30e3ab234f12",
            "subnet_id": "subnet-016123732597b8aaf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3f0bd1b69d62cc9",
            "route_table_id": "rtb-007ab30e3ab234f12",
            "subnet_id": "subnet-0712a57fc56c9f54d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e67ea871b8ed561b",
            "route_table_id": "rtb-0ba96a2d12249a51f",
            "subnet_id": "subnet-09f93016d225d7d95"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025527fc759b865c9",
            "route_table_id": "rtb-0ba96a2d12249a51f",
            "subnet_id": "subnet-02cade85938aa2531"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050bd04eb9fcd9ff7",
            "route_table_id": "rtb-0ba96a2d12249a51f",
            "subnet_id": "subnet-08ec4fc61653cf15d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:subnet/subnet-0931b4d78ab66645e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0931b4d78ab66645e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760230531610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-private-us-west-2a",
              "karpenter.sh/discovery": "part01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-private-us-west-2a",
              "karpenter.sh/discovery": "part01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:subnet/subnet-016123732597b8aaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016123732597b8aaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760230531610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-private-us-west-2b",
              "karpenter.sh/discovery": "part01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-private-us-west-2b",
              "karpenter.sh/discovery": "part01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:subnet/subnet-0712a57fc56c9f54d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0712a57fc56c9f54d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760230531610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-private-us-west-2c",
              "karpenter.sh/discovery": "part01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-private-us-west-2c",
              "karpenter.sh/discovery": "part01",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:subnet/subnet-09f93016d225d7d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f93016d225d7d95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760230531610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:subnet/subnet-02cade85938aa2531",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cade85938aa2531",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760230531610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:subnet/subnet-08ec4fc61653cf15d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ec4fc61653cf15d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "760230531610",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ae02dc7225684dc6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:760230531610:vpc/vpc-0ae02dc7225684dc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c77aa6242d436309",
            "default_route_table_id": "rtb-0e839f6e924cf18d4",
            "default_security_group_id": "sg-038c9ee4c6e640295",
            "dhcp_options_id": "dopt-ef277a97",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae02dc7225684dc6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e839f6e924cf18d4",
            "owner_id": "760230531610",
            "tags": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01"
            },
            "tags_all": {
              "Blueprint": "part01",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "part01"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}